Fixed text from being squished

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,8 @@ html, body {
   margin: 0; padding: 0; border: 0;
   font-family: "Hiragino Mincho Pro";
   padding-top: 35px;
+  float: left;
+  padding-left: 15px;
 }
 
 .nav-bar
@@ -86,7 +88,7 @@ textarea {
 .nav-bar li right{
   float: right;
 }
-#left, #right {
+/*#left, #right {
   position: fixed;
   width: 6%;
   height: 120%;
@@ -101,12 +103,12 @@ textarea {
 #right {
   right: 0;
   //background: linear-gradient(to left, #000000 70%, #027a6a 100%);
-}
+}*/
 #container {
+  float: left;
   background: #fff;
-  width: 80%;
+  width: 95%;
   margin: 0 auto;
-  position: absolute;
   padding: 0;
   padding-top: 20%;
 }
